compiler/testData/checkerWithErrorTypes/quick/regressions/Jet124.jet
fun foo1() : fun (Int) : Int = { (x: Int) => x }

fun foo() {
  val <!UNUSED_VARIABLE!>h<!> : fun (Int) : Int = foo1();
  h(1)
  val <!UNUSED_VARIABLE!>m<!> : fun (Int) : Int = {(a : Int) => 1}//foo1()
  m(1)
}